- Fixed overflow issue in list-item - list-item now wraps word instead of using ellipsis

--- a/front-end/src/app/core/components/list-item/list-item.component.css
+++ b/front-end/src/app/core/components/list-item/list-item.component.css
@@ -13,6 +13,7 @@
 .columns {
     display: flex;
     flex: 5;
+    overflow: hidden;
 }
 
 .remove-btn {
@@ -45,9 +46,9 @@
 }
 
 span {
-    overflow: hidden;
-    text-overflow: ellipsis;
     font-size: 0.75rem;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 @media screen and (min-width: 460px) {
